完成 需求3666 数据罗盘删减内容
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17294 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -14,9 +14,9 @@
     
     <div class="xb-rightPanel pl10 pr10 pb30">
         <div id="stats-order-summary-filter-view" class="xui-filter xui-filterPanel "></div>
-        <table class="xui-summary" >
+        <table class="xui-summary"  style="height:103px;">
             <tr>
-                <td rowspan="2" class="xui-i-left"><p class="xui-i-title">订单概况</p></td>
+                <td class="xui-i-left" style="height:103px;"><p class="xui-i-title">订单概况</p></td>
                 <td>
                 	<div class="xui-i-wrap"><span class="xui-i-money" id="order_num"></span><br/>
                 		<img class="xui-i-img xui-i-hide"  src="/static_v2/img/editor/help.png"/>
@@ -57,7 +57,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <!-- tr>
                 <td>
                 	<div class="xui-i-wrap">
                 		<span class="xui-i-money" id="postage_amount"></span><br/>
@@ -98,7 +98,7 @@
                 		<img class="xui-i-img" id="cod_order_num_help" src="/static_v2/img/editor/help.png"/>
                 	</div>
                 </td>
-            </tr>
+            </tr -->
         </table>
         <div class="xui-charWrap">
         	<div class="xui-i-title">
