--- a/weapp/templates/error_info.html
+++ b/weapp/templates/error_info.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div style="margin-top: 100px; text-align: center;">
     <h1 style="font-size: 3em; color: #333;">404. 您请求的页面不存在</h1>
-    <a href="javascript:window.history.go(-1);" class="btn btn-primary">返回</a>
+    <a href="/" class="btn btn-primary">返回首页</a>
 <div>
 {% endblock %}
 
