解决BUG 3686 积分规则描述问题
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17308 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/integral_strategy.html
+++ b/weapp/mall/templates/mall/editor/integral_strategy.html
@@ -86,7 +86,7 @@
 						<td>分享链接给好友点击</td>
 						<td><input type="text" class="form-control" name="click_shared_url_increase_count" value="{{integral_strategy.click_shared_url_increase_count}}" data-validate="require-int"/>
 						<div class="errorHint"></div></td>
-						<td>每次好友点击，都会增加一次积分</td>
+						<td>一个链接，不同好友点击，都会增加一次积分</td>
 						<td>暂无</td>
 					</tr>
 					<tr>
