--- a/weapp/templates/cloudHousekeeper.html
+++ b/weapp/templates/cloudHousekeeper.html
@@ -29,30 +29,26 @@
         <!-- *start js* [do not modify and delete this line, it will be needed by dist process] -->
         {% if is_use_dev_resource %}
         <!-- *start develop js* [do not modify and delete this line, it will be needed by dist process] -->
-        <script type="text/javascript" src="/termite_static/v3/gmu/zepto.js"></script>
-        <!-- // <script type="text/javascript" src="/termite_static/v3/gmu/gmu-2.1.1.js"></script> -->
         <script type="text/javascript" src="/static_v2/lib/jquery/jquery-1.11.2.min.js"></script>
         <script type="text/javascript" src="/static_v2/lib/jquery.tmpl.min.js"></script>
-        <!-- // <script type="text/javascript" src="/termite_static/v3/gmu/widget/integralMechanism.js"></script> -->
         <script type="text/javascript" src="/termite_static/v3/lib/idangerous.swiper.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/fastclick.js"></script>
-       <!--  // <script type="text/javascript" src="/termite_static/v3/system/system.js"></script> -->
-        <script type="text/javascript" src="/static_v2/js/system/system.js"></script>
-        <script type="text/javascript" src="/termite_static/backbone/underscore-1.4.4.min.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
-        <!-- // <script type="text/javascript" src="/static_v2/lib/underscore-1.7.0.min.js"></script> -->
+        <script type="text/javascript" src="/static_v2/lib/underscore-1.7.0.min.js"></script>
         <script type="text/javascript" src="/static_v2/lib/backbone-1.1.2.js"></script>
-        <!-- // <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script> -->
+
+
+        <script type="text/javascript" src="/termite_static/js/system/system.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>        
         <script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/crypto-js.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/md5.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/webapp.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/weixinapi.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/preview_imges.js"></script>
-        <script type="text/javascript" src="/termite_static/v3/gmu/widget/alert.js"></script>
 
+        <script type="text/javascript" src="/termite_static/js/widget/jquery.alert.js"></script>
         <script type="text/javascript" src="/static_v2/lib/echarts-2.2.3/echarts-all.js"></script>
-        <script type="text/javascript" src="/static_v2/js/view/cloud_housekeeper_view/view.js"></script>
+        <script type="text/javascript" src="/static_v2/js/view/cloud_housekeeper_statistics_view/view.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/system/debug.js"></script>
         <!-- *finish develop js* [do not modify and delete this line, it will be needed by dist process] -->
@@ -65,7 +61,7 @@
         <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
         <meta content="telephone=no" name="format-detection">
     </head>
-    <body data-ui-role="integralMechanism" data-value="{{ cur_request_member.token }}" data-key="fmt" is-under-develop="{{ under_develop }}" style="background:#f2f2f2;">
+    <body is-under-develop="{{ under_develop }}" style="background:#f2f2f2;">
         <!-- xt-errMsg for test -->
         <input id="xt-errMsg" type="hidden" value="" />
         
@@ -99,8 +95,21 @@
             {% endfor %}
         </div>
         
-
         <script type="text/javascript">
+            $(document).ready(function(){
+                var bodyHeight = document.body.clientHeight;
+                $('.xa-loginPage').height(bodyHeight);
+                
+            });
+        </script>
+        <script type="text/javascript">
+            W.webapp_id = "{{request.cloud_user.get_webapp_id}}";
+            W.wglass_host = "http://wglass.weizzz.com";
+
+            // W.wglass_host = "http://tj.weizzz.com";
+            // W.webapp_id = "3211";
+
+
             var isHideWeixinOptionMenu = {% if is_hide_weixin_option_menu %}true{% else %}false{% endif %};
 
             W.projectId = "{{request.project.id}}";
@@ -246,15 +255,6 @@
                     });
                 }
             });
-            {# 百度统计代码开始 #}
-            var _hmt = _hmt || [];
-            (function() {
-            var hm = document.createElement("script");
-            hm.src = "//hm.baidu.com/hm.js?ee18872310bbb14797f87c9eda185a85";
-            var s = document.getElementsByTagName("script")[0]; 
-            s.parentNode.insertBefore(hm, s);
-            })();
-            {# 百度统计代码结束 #}
         </script>
 
         {% if under_develop %}
