修复BUG 3669 查询后的结果，商品库存是-1
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17330 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/edit_pay_interface.html
+++ b/weapp/mall/templates/mall/editor/edit_pay_interface.html
@@ -11,6 +11,7 @@
 </ul>
 <div class="xui-PayInterfacePage">
 	<form class="form-horizontal" method="post" id="editForm">
+		<input type="hidden" name="_method" value="{% if is_new %}put{% else %}post{% endif %}"/>
 		<fieldset>
 			<!-- 通用配置 -->
 			<div id="generalConfig" style="margin-top:28px;">
