修改商品查询，上架时间->创建时间
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17331 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/mall_product_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_product_filter_view/template.html
@@ -44,7 +44,7 @@
 		</div class="xui-i-item">
 
 		<div class="xui-i-item">
-			<label>上架时间
+			<label>创建时间
 			：</label>
 			<input
 				type="text"
