修复http://weappop.weizoom.com/watchdog/show/6949441/
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17354 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -251,7 +251,7 @@
 		<header>
 			<span  class="xui-fontBold">商品属性</span>
 			{% if not property_templates %}
-				<span style="padding-left:18px;">您还没有配置属性模板，可以前往<a href="/mall2/property/" target="_blank">配置属性模板</a></span>
+				<span style="padding-left:18px;">您还没有配置属性模板，可以前往<a href="/mall2/property_list/" target="_blank">配置属性模板</a></span>
 			{% else %}
 			<select class="ml20 xa-propertyTemplateSelector">
 				<option value="-1">选择属性模板</option>
