修复会员详情订单列表的连接错误
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17360 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -174,7 +174,7 @@
 		        	{% if orders %}
 						{% for order in orders %}
 		        		<tr>
-			        		<td><span class="xui-color-blue"><a href="/mall/order_detail/get/?order_id={{order.id}}" target="_blank">{{order.order_id}}</a><span></td>
+			        		<td><span class="xui-color-blue"><a href="/mall2/order/?order_id={{order.id}}" target="_blank">{{order.order_id}}</a><span></td>
 			        		<td>{{ order.final_price|floatformat:"-2" }}</td>
 			        		<td>{{ order.created_at|unify_datetime }}</td>
 			        		<td>
