--- a/weapp/mall/templates/mall/editor/promotion/integral_sales.html
+++ b/weapp/mall/templates/mall/editor/promotion/integral_sales.html
@@ -18,7 +18,7 @@
 		<label for="topSelectAll" class="xui-topSelectAll">全选</label>
 		<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchFinish">结&nbsp;&nbsp;&nbsp;&nbsp;束</a>
 		<a href="javascript:void(0);" class="btn btn-default xa-batchDelete">删&nbsp;&nbsp;&nbsp;&nbsp;除</a>
-		<a href="{% if is_order_integral_open %}javascript:void(W.showHint('error', '请先关闭整单抵扣上限设置!'));{% else %}/mall2/integral_sales/{% endif %}" class="btn btn-success ml10 fr xui-btnSetting mr10"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;新建活动</a>
+		<a href="{% if is_order_integral_open %}javascript:void(W.showHint('error', '请先关闭整单抵扣上限设置!'));{% else %}/mall2/integral_sale/{% endif %}" class="btn btn-success ml10 fr xui-btnSetting mr10"><img src="/static_v2/img/editor/plusOpcity.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;新建活动</a>
 	</div>
 	<div
 		data-ui-role="advanced-table"
@@ -136,10 +136,10 @@
 						<!--
 						<a href="/mall2/integral_sale/copy/?id=${promotion.id}" class="xa-copy fl" style="width: 40px;text-decoration:none;">复制</a>
 						-->
-						<a href="/mall2/integral_sales/?id=${promotion.id}" class="fl" style="width: 40px;text-decoration:none;">详情</a>
+						<a href="/mall2/integral_sale/?id=${promotion.id}" class="fl" style="width: 40px;text-decoration:none;">详情</a>
 						<a href="javascript:void(0);" class="xa-delete fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;删除</a>
 						{{else}}
-						<a href="/mall2/integral_sales/?id=${promotion.id}" class="fl" style="width: 40px;text-decoration:none;">详情</a>
+						<a href="/mall2/integral_sale/?id=${promotion.id}" class="fl" style="width: 40px;text-decoration:none;">详情</a>
 						<a href="javascript:void(0);" class="xa-notFinishInfo xa-finish fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;结束</a>
 						<a href="javascript:void(0);" class="xui-hide xa-finishInfo xa-delete fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;删除</a>
 						{{/if}}
