修复BUG 3717个人中心订单列表状态和管理后台不同步
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@17400 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -53,17 +53,17 @@
         </div>
         <div class="control-group">
             <p class="pt5 m0">订单状态：
-               {% ifequal order.status 1 %}
-               		已取消
-               {% endifequal %}
                {% ifequal order.status 0 %}
                		待支付
+               {% endifequal %}
+               {% ifequal order.status 1 %}
+                  已取消
                {% endifequal %}
                {% ifequal order.status 3 %}
                		待发货
                {% endifequal %}
                {% ifequal order.status 4 %}
-               		已发货
+               		待收货
                {% endifequal %}
                {% ifequal order.status 5 %}
                		已完成
