--- a/weapp/static_v2/css/cloudHousekepper.css
+++ b/weapp/static_v2/css/cloudHousekepper.css
@@ -16,37 +16,37 @@
 }
 .xui-loginPage .xui-title{
      width: 100%;
-     height: 20vh;
+     height: 113px;
      position: relative;
      font-size: 1.5625rem;
      text-indent: -10000px;
      text-align: center;
 }
 .xui-loginPage .xui-title .xui-bgImg{
-	width:100%;
-	height: 5vh;
-	position: absolute;
-	bottom: 30px;
-	background: url(/static_v2/img/cloudHousekeeper/title_5.png) no-repeat;
-	-webkit-background-size: 100%;
-	background-size: 100%;
-
+    width:100%;
+    height: 28px;
+    position: absolute;
+    bottom: 30px;
+    background: url(/static_v2/img/cloudHousekeeper/title_5.png) no-repeat;
+    -webkit-background-size: 100%;
+    background-size: 100%;
 }
 .xui-loginPage .xui-loginInfo{
     width: 100%;
     overflow: hidden;
 }
 .xui-loginPage .xui-loginInfo .xui-tel,.xui-loginPage .xui-loginInfo .xui-verification{
-    height: 6vh;
+    height: 34px;
     border-bottom: 1px solid #999;
     width: 100%;
-    padding-top: 2vh;
+    padding-top: 11px;
 }
 .xui-loginPage .xui-loginInfo .xui-verification{
     width: 65%;
 }
 .xui-loginPage .xui-loginInfo input{
-    height: 5.8vh;
+    width: 100%;
+    height: 33px;
     border: none;
     font-size: 0.875rem;
     outline: none;
@@ -57,40 +57,28 @@
     width: 32%;
     background: #49AEFC;
     color: #fff;
-    height: 6vh;
+    height: 34px;
     border-radius: 2px;
-    line-height: 6vh;
+    line-height: 34px;
     text-align: center;
-    margin-top: 2vh;
+    margin-top: 11px;
     font-size: 0.875rem;
 }
 .xui-loginPage .xui-loginBtn{
     width: 40%;
-    height: 6vh;
+    height: 34px;
     text-align: center;
-    line-height: 6vh;
+    line-height: 34px;
     border: 1px solid #0785E9;
     border-radius: 2px;
     position: absolute;
-    top:45vh;
+    top:255px;
     left: 50%;
     margin-left: -20%;
     color: #0785E9;
     font-size: 1rem;
 }
-/*.xui-loginPage .xui-alert{
-    width: 54%;
-    color: #fff;
-    background: rgba(0,0,0,0.5);
-    height: 8vh;
-    line-height: 8vh;
-    position: relative;
-    top:56vh;
-    left: 50%;
-    margin-left: -26%;
-    text-align: center;
-    border-radius: 3px;
-}*/
+
 /*统计页,详情页*/
 .xui-statisticsPage,.xui-reportDetailPage{
 	background: #eee;
@@ -366,5 +354,29 @@
 	}
 	.xui-statisticsPage .xui-figure, .xui-reportDetailPage .xui-figure{
 		font-size: 20px;
+	}
+	/*登陆页*/
+	.xui-loginPage .xui-title{
+		height: 147px;
+	}
+	.xui-loginPage .xui-title .xui-bgImg{
+		height: 44px;
+	}
+	.xui-loginPage .xui-loginInfo .xui-tel,.xui-loginPage .xui-loginInfo .xui-verification{
+		height: 44px;
+		padding-top: 15px;
+	}
+	.xui-loginPage .xui-loginInfo input{
+		height: 40px;
+	}
+	.xui-loginPage .xui-loginInfo .xui-getVerification{
+		height: 44px;
+		margin-top: 15px;
+		line-height: 44px;
+	}
+	.xui-loginPage .xui-loginBtn{
+		height: 44px;
+		line-height: 44px;
+		top:331px;
 	}
 }
